[project]
name = "langgraph-mcp-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "langgraph>=0.4.8",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "mcp[cli]>=1.9.2",
    "openai>=1.84.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]
